--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<title>sheep and pig</title>
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+
+		<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 	</head>
 	<body>
 		<div class="container">
