--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				</nav>
 				<div class="ip-slideshow"></div>
 			</div>
+			<audio src="media/happy.mp3" type="audio/mpeg" autoplay="autoplay"/>
 		</div>
 		<script src="js/particlesSlideshow.js"></script>
 	</body>
